updated other pages fonts and spacing

--- a/awardsachievements.html
+++ b/awardsachievements.html
@@ -135,7 +135,7 @@
 
     <!-- // AWARDS 1  -->
     <div class="recognition-type">
-        National Law Journal – Plaintiffs’ Hot List 2014, 2016
+        National Law Journal – Plaintiffs’ Hot List 
     </div>
     <div class="recognition-text">
         Kessler Topaz didn't flinch from bringing some of last year's biggest securities fraud and shareholder derivative actions - and the firm counted more than $5.2 billion in big settlements and judgments. 
@@ -146,10 +146,10 @@
 
     <!-- // AWARDS 2  -->
     <div class="recognition-type">
-        Legal Intelligencer – Class Action Litigation Firm of the Year 2012, 2014, 2017 & 2020 
+        Legal Intelligencer – Class Action Litigation Firm of the Year 
     </div>
     <div class="recognition-text">
-        In 2012, 2014, 2017 & 2020 The Legal Intelligencer selected Kessler Topaz as the Class Action Litigation Firm of the Year. The Legal Intelligencer is the oldest daily law journal published in the United States and it serves the community of Philadelphia, Pennsylvania and the surrounding area. The Legal Intelligencer covers legal news, court decisions, legislation, and analysis and insight by leading legal professionals. The Legal Intelligencer also publishes a variety of special publications each year, including rankings of the top firms in Pennsylvania.
+        In 2012, 2014, 2017, 2020 + 2021 The Legal Intelligencer selected Kessler Topaz as the Class Action Litigation Firm of the Year. The Legal Intelligencer is the oldest daily law journal published in the United States and it serves the community of Philadelphia, Pennsylvania and the surrounding area. The Legal Intelligencer covers legal news, court decisions, legislation, and analysis and insight by leading legal professionals. The Legal Intelligencer also publishes a variety of special publications each year, including rankings of the top firms in Pennsylvania.
     </div>
     <!-- // END OF AWARDS 2  -->
 
@@ -197,7 +197,7 @@
     </div>
     <!-- // END OF AWARDS 6  -->
     </div>
-</div>
+</div><br><br>
 <!-- END OF AWARDS & ACHIEVEMENTS SECTION  -->
 <!-- /////////////////////////////////////////// -->
 
@@ -219,7 +219,7 @@
         </ul>
       </div>
     </div>
-  </div><br><br><br>
+  </div><br>
    <!-- END OF AWARDS CAROUSEL --> 
    <!-- /////////////////////////////////////////// -->
 
