--- a/overview.html
+++ b/overview.html
@@ -54,7 +54,6 @@
                   <li><a href="#" id="dropdown-overview">Overview</a></li>
                   <li><a href="#" id="dropdown-testimonials">Testimonials</a></li>
                   <li><a href="#" id="dropdown-community">In the Community</a></li>
-                  <li><a href="#" id="dropdown-trialexperience">Trial Experience</a></li>
                   <li><a href="#" id="dropdown-FAQs">FAQs</a></li>
                   <li><a href="#" id="dropdown-sustainability">Sustainability</a></li>
                 </ul>
@@ -137,18 +136,18 @@
 
         <br>
 
-        <div class="overview-subheader2">Trailblazers in complex contingent litigation</div>
+        <div class="overview-subheader2">TRAILBLAZERS IN COMPLEX CONTINGENT LITIGATION</div>
         Clients—including sophisticated institutional investors, consumers, employees, whistleblowers, governments, and pension funds and sovereign wealth funds—choose Kessler Topaz for our fierce dedication, successful track record and innovative approach to litigation. We have been pioneers in areas including international shareholder litigation, fiduciary breaches and the development of online tools for portfolio tracking. In addition, we are a leader in implementing high-impact corporate governance reforms to protect shareholder rights, improve value and prevent corporate mismanagement.
 
-        <br><br>
+        <br><br><br>
 
-        <div class="overview-subheader2">Ahead of the pack</div>
+        <div class="overview-subheader2">AHEAD OF THE PACK</div>
         Our peers and the legal media have selected Kessler Topaz for numerous honors, including the National Law Journal’s Plaintiff’s Hot List, BTI Consulting Group’s Honor Roll of Most Feared Law Firms and Legal Intelligencer’s Class Action Firm of the Year. Our acclaimed annual seminars for institutional investors are touchpoints for thought leadership, with recent speakers including President Bill Clinton, former Secretary of State Madeline Albright and U.N. Secretary General Kofi Annan.
 
-        <br><br>
+        <br><br><br>
 
          
-        <div class="overview-subheader2">Coast-to-coast coverage</div>
+        <div class="overview-subheader2">COAST-TO-COAST COVERAGE</div>
         Kessler Topaz has 100 lawyers focusing on 11 practice areas, including securities, antitrust, ERISA, consumer and whistleblower litigation. We are located just outside Philadelphia, and in San Francisco.
 
     </div>
