--- a/community.html
+++ b/community.html
@@ -55,7 +55,6 @@
                   <li><a href="#" id="dropdown-overview">Overview</a></li>
                   <li><a href="#" id="dropdown-testimonials">Testimonials</a></li>
                   <li><a href="#" id="dropdown-community">In the Community</a></li>
-                  <li><a href="#" id="dropdown-trialexperience">Trial Experience</a></li>
                   <li><a href="#" id="dropdown-FAQs">FAQs</a></li>
                   <li><a href="#" id="dropdown-sustainability">Sustainability</a></li>
                 </ul>
@@ -137,27 +136,27 @@
           </div>
 
        <div id="phillies-section">
-            <span style="color: rgb(114, 148, 13); font-weight: bold;"> The ALS Association-Phillies Phestival<br></span>
+            <span style="color: rgb(114, 148, 13); font-size: 18px; font-weight: 500; letter-spacing: .1em;">THE ALS ASSOCATION-PHILLIES PHESTIVAL<br><br></span>
            Since 2003 Kessler Topaz has been a sponsor of the Philadelphia Chapter of The ALS Association’s Phillies Phestival, their largest fundraiser of the year.  In 2009 the Firm became the lead sponsor of the Phestival and is proud to support this great event and amazing organization. The ALS Association is the only national not-for-profit health organization dedicated solely to the fight against ALS.  ALSA covers all the bases - research, patient and community services, public education, and advocacy - in providing help and hope to those facing the disease. The mission of The ALS Association (ALSA) is to find a cure for and improve living with amyotrophic lateral sclerosis.  The Phestival is not only a fundraiser, but also an opportunity for ALS patients and their families to meet many of their heroes from the baseball diamond. 
         </div>
 <br><br>
         <div id="ACS-section">
-            <span style="color: rgb(114, 148, 13); font-weight: bold;">  American Cancer Society Bike-A-Thon<br></span>
+            <span style="color: rgb(114, 148, 13); font-size: 18px; font-weight: 500; letter-spacing: .1em">AMERICAN CANCER SOCIETY BIKE-A-THON<br><br></span>
             For more than a 100 years, The American Cancer Society has been leading the fight to end cancer and have helped usher in an era where more people survive cancer than ever before. By translating research findings into action, we have seen a 20% decline in US cancer death rates since the early 1990s. The Bike-A-Thon is an annual fundraiser that sees 4,000 cyclists ride from Philadelphia to Atlantic City raising over $1 million for the ACS.  Kessler Topaz has served as a Presenting Sponsor since 2008 and Team KTMC has been the top fundraising team for many years consistently raising hundreds of thousands of dollars for the Bike-A-Thon.
         </div>
 <br><br>
         <div id="special-oly-section">
-            <span style="color: rgb(114, 148, 13); font-weight: bold;">  Special Olympics Pennsylvania<br></span>
+            <span style="color: rgb(114, 148, 13); font-size: 18px; font-weight: 500; letter-spacing: .1em">SPECIAL OLYMPICS PENNSYLVANIA<br><br></span>
             Kessler Topaz is an enthusiastic sponsor and supporter of Special Olympics Pennsylvania. In Pennsylvania, Special Olympics supports more than 20,000 adults and children with intellectual disabilities -- providing these athletes with year-round training and competition in a variety of Olympic-style sports at no cost to them. For the past several years, a large contingent of Firm employees, family and friends have volunteered at Special Olympics Pennsylvania’s Fall Festival – the largest student-run event in the world. The Fall Festival is held each year at Villanova University and hosts over 1,000 athletes who compete in bocce ball, long distance running, power-lifting, volleyball, soccer, and roller skating. Through Special Olympics, athletes have opportunities to develop their physical fitness, demonstrate courage, experience joy, and participate in a sharing of gifts, skills, and friendship with their families, other Special Olympics athletes, and the community. the Firm is proud to participate in this amazing event and to support such a noble cause.
         </div>
 <br><br>
         <div id="back-feet-section">
-            <span style="color: rgb(114, 148, 13); font-weight: bold;">    Temple University Beasley School of Law Diversity Scholarship<br></span>
+            <span style="color: rgb(114, 148, 13); font-size: 18px; font-weight: 500; letter-spacing: .1em">TEMPLE UNIVERSITY BEASLEY SCHOOL OF LAW DIVERSITY SCHOLARSHIP<br><br></span>
             Kessler Topaz is committed to encouraging and facilitating well-qualified minority undergraduates to pursue a career in the legal profession. To that end, the Firm has partnered with the Temple University Beasley School of Law to offer a yearly scholarship to one deserving minority candidate, covering tuition and related costs, to help promote diversity within the local legal community. The scholarship recipient is also eligible to participate in an internship with the Firm over the summer following their first year of law school. Temple University has educated many of the Firm’s top attorneys and we believe that this institution is the best fit with our Firm’s litigation practices. Temple students have the opportunity to join Temple’s world renowned Trial Advocacy Program, which is an excellent training ground for future litigators. This, coupled with their strenuous curriculum, fosters an environment where creative litigators can begin to make their mark.
         </div>
 
         <br>
-
+<!-- 
         <div class="comm-logos">
           <img src="assets/images/community/eagles.png" width="300" height="185">
           <img src="assets/images/community/phillies.png" width="290" height="200">
@@ -169,7 +168,7 @@
 
           <div class="all-comm-logos">
             <img src="assets/images/community/allcomlogos.png" width="400">
-          </div>
+          </div> -->
 
     </div>
 </div>
