--- a/fraud.html
+++ b/fraud.html
@@ -54,7 +54,6 @@
                   <li><a href="#" id="dropdown-overview">Overview</a></li>
                   <li><a href="#" id="dropdown-testimonials">Testimonials</a></li>
                   <li><a href="#" id="dropdown-community">In the Community</a></li>
-                  <li><a href="#" id="dropdown-trialexperience">Trial Experience</a></li>
                   <li><a href="#" id="dropdown-FAQs">FAQs</a></li>
                   <li><a href="#" id="dropdown-sustainability">Sustainability</a></li>
                 </ul>
@@ -136,17 +135,18 @@
             Kessler Topaz is one of the largest firms specializing in the prosecution of complex class action litigation.  Kessler Topaz's shareholder litigation practice focuses on the prosecution of securities fraud claims brought against public companies as well as their officers, directors, and advisors.
 
 Kessler Topaz also dedicates a large portion of its practice to complex litigation on behalf of consumers as well as public and private entities, including municipalities, state agencies, and multi-employer welfare funds.
-        </div>
         
-        <br>
+        
+        <br><br>
 
 
         If you, or someone you know has knowledge of a possible case, please fill out our online form or contact us at (844) 887-9500.
+      </div>
 
         <div class="container">  
             <form id="contact" action="" method="post">
-              <h3>Free Consultation Request</h3>
-              <h4>Contact us today, and get reply with in 24 hours!</h4>
+              <h3>Free Consultation Request</h3><br>
+              <!-- <h4>Contact us today, and get reply with in 24 hours!</h4> -->
               <fieldset>
                 <input placeholder="Full Name" type="text" tabindex="1" required>
               </fieldset>
