--- a/news.html
+++ b/news.html
@@ -79,7 +79,7 @@
   
             <li><a href="#">CASES</a>
               <ul class="dropdown">
-                <li><a href="#">New Cases</a></li>
+                <li><a href="#" id="dropdown-newcases">New Cases</a></li>
                 <li><a href="#">Current Cases</a></li>
                 <li><a href="#">Settled Cases</a></li>
                 <li><a href="#">Landmark Results</a></li>
