added settled cases

--- a/settledcases.html
+++ b/settledcases.html
@@ -12,7 +12,7 @@
     <!-- <link rel="stylesheet" href="assets/css/news-LP.css"> -->
     <link rel="stylesheet" href="assets/css/socialmediabuttons.css">
     <link rel="stylesheet" href="assets/css/navbar-logo-white.css">
-    <link rel="stylesheet" href="assets/css/newcases.css">
+    <link rel="stylesheet" href="assets/css/settledcases.css">
      <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
@@ -121,16 +121,16 @@
 
     <section data-aos="fade-right">
         <!--for demo wrap-->
-        <div class="new-cases-header">NEW CASES</div><br>
+        <div class="settled-cases-header">SETTLED CASES</div><br>
         <div class="tbl-header">
           <table cellpadding="0" cellspacing="0">
             <thead>
               <tr>
-                <th>Company</th>
-                <th>Exhange</th>
-                <th>Ticker</th>
-                <th>Days left to seek lead plaintiff</th>
-                <th>INFO</th>
+                <th>Case Name</th>
+                <th>Class Period</th>
+                <th>Settlement</th>
+                <th>Notice + Proof of Claim</th>
+                <th>Submit By</th>
               </tr>
             </thead>
           </table>
@@ -139,39 +139,81 @@
           <table cellpadding="0" cellspacing="0">
             <tbody>
               <tr>
-                <td>GoodRx Holdings, Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>24</td>
-                <td style="color: rgb(187, 90, 0); "><a>Learn More</a></td>
+                <td>Adeptus Health Inc.</td>
+                <td>June 25, 2014 - March 1, 2017</td>
+                <td>$44,000,000</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td>June 8, 2020</td>
               </tr>
               <tr>
-                <td>Penumbra, Inc. (2021)</td>
-                <td>??</td>
-                <td>??</td>
-                <td>52</td>
-                <td style="color: rgb(187, 90, 0); "><a>Learn More</a></td>
+                <td>Banco Bradesco S.A.</td>
+                <td>August 8, 2014 - July 27, 2016</td>
+                <td>$14,500,000</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td>December 21, 2019</td>
               </tr>
               <tr>
-                <td>QuantumScape Corporation f/k/a Kensington<br> Capital Acquisition Corp.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>44</td>
-                <td style="color: rgb(187, 90, 0); "><a>Learn More</a></td>
+                <td>Citibank ADR<br> Capital Acquisition Corp.</td>
+                <td>January 1, 2006 - September 4, 2018</td>
+                <td>$14,750,000</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td>August 12, 2019</td>
               </tr>
               <tr>
-                <td>Restaurant Brands International Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>27</td>
-                <td style="color: rgb(187, 90, 0); "><a>Learn More</a></td>
+                <td>Dole Food Company, Inc. (2013)</td>
+                <td>June 11, 2013 - November 1, 2013</td>
+                <td>$113,293,838.30</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td></td>
               </tr>
               <tr>
-                <td>Splunk Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>10</td>
-                <td style="color: rgb(187, 90, 0); "><a>Learn More</a></td>
+                <td>Endo International PLC</td>
+                <td>November 30, 2012 - June 8, 2017</td>
+                <td>$82,500,000</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td>February 7, 2020</td>
+              </tr>
+              <tr>
+                <td>Insys Therapeutics, Inc. – Defendant Babich Settlement</td>
+                <td>March 3, 2015 - January 25, 2016</td>
+                <td>$250,000</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td>November 7, 2020</td>
+              </tr>
+              <tr>
+                <td>Insys Therapeutics, Inc. - Defendant Baker Settlement</td>
+                <td>March 3, 2015 - January 25, 2016</td>
+                <td>$2,000,000</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td>September 12, 2020</td>
+              </tr>
+              <tr>
+                <td>JPMorgan ADR FX</td>
+                <td>November 21, 2010 - July 18, 2018; November 21, 2012 - July 18, 2018</td>
+                <td>$9,500,000</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td>September 19, 2019</td>
+              </tr>
+              <tr>
+                <td>SeaWorld Entertainment, Inc.</td>
+                <td>August 29, 2013 - August 12, 2014</td>
+                <td>$65,000,000</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td>July 16, 2020</td>
+              </tr>
+              <tr>
+                <td>Snap Inc.</td>
+                <td>March 2, 2017 - August 10, 2017</td>
+                <td>$154,687,500</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td>January 25, 2021</td>
+              </tr>
+              <tr>
+                <td>The Bank of New York Mellon ADR FX</td>
+                <td>January 1, 1997 - January 17, 2019</td>
+                <td>$72,500,000</td>
+                <td style="color: rgb(187, 90, 0);"><a>PDF</a></td>
+                <td>August 15, 2019</td>
               </tr>
             </tbody>
           </table>
