--- a/fraud.html
+++ b/fraud.html
@@ -78,7 +78,7 @@
               <ul class="dropdown">
                 <li><a href="#" id="dropdown-newcases">New Cases</a></li>
                   <li><a href="#">Current Cases</a></li>
-                  <li><a href="#">Settled Cases</a></li>
+                  <li><a href="#" id="dropdown-settledcases">Settled Cases</a></li>
                   <li><a href="#">Landmark Results</a></li>
                 </ul>
             </li>
