--- a/people.html
+++ b/people.html
@@ -77,7 +77,7 @@
               <ul class="dropdown">
                 <li><a href="#">New Cases</a></li>
                 <li><a href="#">Current Cases</a></li>
-                <li><a href="#">Settled Cases</a></li>
+                <li><a href="#" id="dropdown-settledcases">Settled Cases</a></li>
                 <li><a href="#">Landmark Results</a></li>
                 </ul>
             </li>
