--- a/sustainability.html
+++ b/sustainability.html
@@ -76,9 +76,9 @@
   
               <li><a href="#">CASES</a>
                 <ul class="dropdown">
-                  <li><a href="#">New Cases</a></li>
+                  <li><a href="#" id="dropdown-newcases">New Cases</a></li>
                   <li><a href="#">Current Cases</a></li>
-                  <li><a href="#">Settled Cases</a></li>
+                  <li><a href="#" id="dropdown-settledcases">Settled Cases</a></li>
                   <li><a href="#">Landmark Results</a></li>
                   </ul>
               </li>
