added landmark results and added new case standalone page

--- a/newcases-about.html
+++ b/newcases-about.html
@@ -12,7 +12,7 @@
     <!-- <link rel="stylesheet" href="assets/css/news-LP.css"> -->
     <link rel="stylesheet" href="assets/css/socialmediabuttons.css">
     <link rel="stylesheet" href="assets/css/navbar-logo-white.css">
-    <link rel="stylesheet" href="assets/css/newcases.css">
+    <link rel="stylesheet" href="assets/css/newcases-about.css">
      <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
@@ -117,67 +117,42 @@
 <br>
 <div class="bg-image whiteglobe-sub"></div>
 
+<div class="container">
 
+<div class="newcases-about-header">
+    KESSLER TOPAZ MELTZER & CHECK, LLP: INVESTOR CLASS ACTION <br> FILED AGAINST GOODRX HOLDINGS, INC. FOR SECURITIES FRAUD VIOLATIONS
+</div>
 
-    <section data-aos="fade-right">
-        <!--for demo wrap-->
-        <div class="new-cases-header">NEW CASES</div><br>
-        <div class="tbl-header">
-          <table cellpadding="0" cellspacing="0">
-            <thead>
-              <tr>
-                <th>Company</th>
-                <th>Exhange</th>
-                <th>Ticker</th>
-                <th>Days left to seek lead plaintiff</th>
-                <th>INFO</th>
-              </tr>
-            </thead>
-          </table>
-        </div>
-        <div class="tbl-content">
-          <table cellpadding="0" cellspacing="0">
-            <tbody>
-              <tr>
-                <td id="GoodRX">GoodRx Holdings, Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>24</td>
-                <td id="GoodRX1" style="color: rgb(187, 90, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Penumbra, Inc. (2021)</td>
-                <td>??</td>
-                <td>??</td>
-                <td>52</td>
-                <td style="color: rgb(187, 90, 0); "><a>Learn More</a></td>
-              </tr>
-              <tr>
-                <td>QuantumScape Corporation f/k/a Kensington<br> Capital Acquisition Corp.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>44</td>
-                <td style="color: rgb(187, 90, 0); "><a>Learn More</a></td>
-              </tr>
-              <tr>
-                <td>Restaurant Brands International Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>27</td>
-                <td style="color: rgb(187, 90, 0); "><a>Learn More</a></td>
-              </tr>
-              <tr>
-                <td>Splunk Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>10</td>
-                <td style="color: rgb(187, 90, 0); "><a>Learn More</a></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
-      
+<div class="newcases-complaint">
+    VIEW COMPLAINT 
+</div>
+
+<div class="newcases-submit-info">
+    SUBMIT YOUR INFORMATION 
+</div><br><br><br><br><br>
+
+<div class="newcases-description">
+    Notice is hereby given that a class action lawsuit has been filed on behalf of those who purchased or otherwise acquired GoodRx Holdings, Inc. (“GoodRx”) (NASDAQ: GDRX) Class A common stock between September 23, 2020 and November 16, 2020, inclusive (the “Class Period”).<br><br>
+
+    <span style="color: rgb(228, 148, 0);">GoodRx investors may receive additional information about the case by clicking the link "Submit Your Information" above.</span><br><br>
+
+    According to the complaint, GoodRx is a holding company that owns and operates a U.S. consumer-focused digital healthcare platform.  GoodRx represents that it provides consumers with free information and tools that allow them to compare prices and save on their prescription drug purchases. GoodRx provides its users with these services via apps and websites that display prices and discounts at local and mail-order pharmacies for both insured and uninsured Americans.  GoodRx primarily earns its revenue from prescription transaction fees paid by Pharmacy Benefit Managers that manage formularies and prescription transactions. GoodRx also generates revenue from subscription, advertising and telehealth services.<br><br>
+
+    On August 28, 2020, GoodRx filed with the SEC a Form S-1 Registration Statement (the “Registration Statement”) for its September 2020 initial public offering (“IPO”). The Registration Statement, as amended, was declared effective by the SEC on September 22, 2020.  At the time of the IPO, unbeknownst to investors, Amazon.com, Inc. (“Amazon”) was developing and would soon introduce its own online and mobile prescription medication ordering and fulfillment service that would directly compete with GoodRx. The complaint alleges that the defendants timed the IPO so that it was priced before Amazon announced its online pharmaceutical business to facilitate the IPO and create artificial demand for the common shares sold therein, as well to maximize the amount of money GoodRx and the selling stockholders could raise in the IPO.  The Class Period commences on September 23, 2020, the first day GoodRx common stock began publicly trading on the NASDAQ.<br><br>
+
+    On November 17, 2020, Amazon announced two new pharmacy offerings, a Prime Rx plan and a discount card program, which, among other things, would compete directly with GoodRx’s platform by making it “simple for customers to compare prices and purchase medications for home delivery, all in one place.” That same day, CNBC.com reported that Amazon Prime members would now have access to discounts of up to 80% on generic medications and up to 40% on brand-name prescriptions through its relationship with the Inside Rx savings program.  This competitive pricing posed a severe threat to GoodRx’s business model.  Following this news, the price of GoodRx common stock declined 23%, from $46.72 per share to $36.21 per share by market close on November 17, 2020, erasing more than $4 billion of GoodRx’s market capitalization.<br><br>
+
+    The complaint alleges that throughout the Class Period, the defendants misrepresented and failed to disclose the adverse facts about Amazon’s imminent entry into the online pharmaceutical business, which were known to defendants or recklessly disregarded by them.  Specifically, the complaint alleges that the defendants knew, but failed to disclose, that Amazon had been in the process of developing and would soon introduce its own online and mobile prescription medication ordering and fulfillment service.<br><br>
+
+    <span style="color: rgb(228, 148, 0);">If you are a member of the class described above, you may no later than February 16, 2021 move the Court to serve as lead plaintiff of the class, if you so choose.</span><br><br>
+
+    A lead plaintiff is a representative party that acts on behalf of other class members in directing the litigation. In order to be appointed lead plaintiff, the Court must determine that the class member’s claim is typical of the claims of other class members, and that the class member will adequately represent the class. Your ability to share in any recovery is not, however, affected by the decision whether or not to serve as a lead plaintiff. Filling out the online form above or communicating with any counsel is not necessary to participate or share in any recovery achieved in this case.  Any member of the purported class may move the court to serve as a lead plaintiff through counsel of his/her choice, or may choose to do nothing and remain an inactive class member.<br><br>
+
+    Kessler Topaz Meltzer & Check, LLP has not filed a complaint in this matter.  If you wish to discuss this action or have any questions concerning this notice or your rights or interests with respect to these matters, please contact Kessler Topaz Meltzer & Check, LLP (James Maro, Esq. (484-270-1453) or Adrienne Bell, Esq. (484-270-1435)); toll-free at (844) 887-9500; or via e-mail at info@ktmc.com.  If you would like additional information about the suit, please click on the link "Submit Your Information" above and fill out the form as promptly as possible.
+
+</div>
+
+</div>
 
     <!-- /////////////////////////////////////////// -->
 <!-- BEGINNING OF SOCIAL MEDIA BUTTONS -->
