--- a/news.html
+++ b/news.html
@@ -52,16 +52,19 @@
                 <li><a href="#" id="dropdown-home">HOME</a>
                 </li>
 
-              <li><a href="#">ABOUT</a>
-                <ul class="dropdown">
-                  <li><a href="#" id="dropdown-overview">Overview</a></li>
-                  <li><a href="#" id="dropdown-testimonials">Testimonials</a></li>
-                  <li><a href="#" id="dropdown-community">In the Community</a></li>
-                  <li><a href="#" id="dropdown-FAQs">FAQs</a></li>
-                  <li><a href="#" id="dropdown-sustainability">Sustainability</a></li>
-                </ul>
-              </li>
+                <li><a href="#">ABOUT</a>
+                  <ul class="dropdown">
+                    <li><a href="#" id="dropdown-overview">Overview</a></li>
+                    <li><a href="#" id="dropdown-testimonials">Testimonials</a></li>
+                    <li><a href="#" id="dropdown-security">Security Compliance</a></li>
+                    <li><a href="#" id="dropdown-community">In the Community</a></li>
+                    <li><a href="#" id="dropdown-diversity">Diversity & Inclusion</a></li>
+                    <li><a href="#" id="dropdown-sustainability">Sustainability</a></li>
+                    <li><a href="#" id="dropdown-FAQs">FAQs</a></li>
+                  </ul>
+                </li>
 
+                
               <li><a href="#" id="dropdown-people">PEOPLE</a>
               </li>
 
@@ -92,6 +95,7 @@
                 <li><a href="#" id="dropdown-insights">Insights</a></li>
                 <li><a href="#" id="dropdown-awards">Awards & Achievements</a></li>
                 <li><a href="#" id="dropdown-conferences">Conferences</a></li>
+                <li><a href="#" id="dropdown-videos">Videos</a></li>
               </ul>
             </li>
 
