--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
   
     <!-- // KTMC LOGO  -->
     <h1 class="logo"><img id="logo-main" src="assets/images/ktmc.png"></h1>
+    <h1 class="logo2"><img id="logo-ST" src="assets/images/STlogo.png"></h1>
     <!-- // END OF KTMC LOGO  -->
     
     <!-- // TRAILBLAZERS TAG LINE  -->
