updated split section:

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       <div class="content">
           <div class="description">
               <h1>SETTLEMENT NOTICES</h1>
-              <p>VIEW HERE</p>
+              <p id="settlement-notice">VIEW HERE</p>
           </div>
 
           <img src="assets/images/settlement.jpg" alt="Original">
@@ -250,7 +250,7 @@
       <div class="content">
           <div class="description">
               <h1>NEW CASES</h1>
-              <p>VIEW HERE</p>
+              <p id="new-case-notice">VIEW HERE</p>
           </div>
 
           <img src="assets/images/cases.jpg" alt="Duotone">
