--- a/community.html
+++ b/community.html
@@ -54,7 +54,7 @@
                   <ul class="dropdown">
                     <li><a href="#" id="dropdown-overview">Overview</a></li>
                     <li><a href="#" id="dropdown-testimonials">Testimonials</a></li>
-                    <li><a href="#" id="dropdown-security">Security Compliance</a></li>
+                    <li><a href="#" id="dropdown-security">Data Security</a></li>
                     <li><a href="#" id="dropdown-community">In the Community</a></li>
                     <li><a href="#" id="dropdown-diversity">Diversity & Inclusion</a></li>
                     <li><a href="#" id="dropdown-sustainability">Sustainability</a></li>
@@ -101,7 +101,7 @@
                 <li><a href="#" id="dropdown-offices">Offices</a></li>
                   <li><a href="#">Careers</a></li>
                   <li><a href="#" id="dropdown-contact">General Inquiry</a></li>
-                  <li><a href="#" id="dropdown-fraud">Report Fraud</a></li>
+                  <li><a href="#" id="dropdown-fraud">Report a Fraud</a></li>
                   <li><a href="#">Subscribe</a></li>
                 </ul>
             </li>
