--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 <!-- /////////////////////////////////////////// -->
 <!-- // BEGINNING OF NEWS SECTION -->
-<div class="container">
+<!-- <div class="container">
   <div id="latest-headlines" data-aos="fade-down">LATEST HEADLINES</div>
 
   <div class="row smallest-version" data-aos="fade-down">
@@ -227,7 +227,7 @@
   <div class="view-more-news">MORE FIRM NEWS</div>
   
 	</div>
-</div><br><br><br>
+</div><br><br><br> -->
   <!-- // END OF NEWS SECTION  -->
 <!-- /////////////////////////////////////////// -->
 
