--- a/awardsachievements.html
+++ b/awardsachievements.html
@@ -113,7 +113,7 @@
         </div>
   
     <!-- // KTMC LOGO  -->
-    <h1 class="logo"><img id="logo-main" src="assets/images/ktmc.png"></h1>
+    <h1 class="logo"><img id="logo-main" src="assets/images/ktmc1.png"></h1>
     <!-- // END OF KTMC LOGO  -->
 </header>
 </div>   
