--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
     <h1 class="logo"><img id="logo-main" src="assets/images/ktmc1.png"></h1>
     <!-- <h1 class="logo2"><img id="logo-ST" src="assets/images/STlogo.png"></h1> -->
     <!-- // END OF KTMC LOGO  -->
+    <!-- // END OF NAV BAR & HEADER -->
+<!-- /////////////////////////////////////////// -->
     
     <!-- // TRAILBLAZERS TAG LINE  -->
     <div class="trailblazers-line1" data-aos="fade-right">
