--- a/contact.html
+++ b/contact.html
@@ -166,6 +166,7 @@
     <a class="facebookBtn smGlobalBtn" href="#"></a>
     <a class="twitterBtn smGlobalBtn" href="#" ></a>
 <a class="linkedinBtn smGlobalBtn" href="#" ></a>
+<i class="fab fa-instagram smGlobalBtn" href="#"></i>
 <div id="allRights">KESSLER TOPAZ MELTZER & CHECK, LLP 2020 ALL RIGHTS RESERVED.</div>
 </div>
 <!-- END OF SOCIAL MEDIA BUTTONS -->
