--- a/fraud.html
+++ b/fraud.html
@@ -190,6 +190,7 @@ Kessler Topaz also dedicates a large portion of its practice to complex litigati
     <a class="facebookBtn smGlobalBtn" href="#"></a>
     <a class="twitterBtn smGlobalBtn" href="#" ></a>
 <a class="linkedinBtn smGlobalBtn" href="#" ></a>
+<i class="fab fa-instagram smGlobalBtn" href="#"></i>
 <div id="allRights">KESSLER TOPAZ MELTZER & CHECK, LLP 2020 ALL RIGHTS RESERVED.</div>
 </div>
 <!-- END OF SOCIAL MEDIA BUTTONS -->
