--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
    <!-- END OF AWARDS & ACHIEVEMENTS SECTION --> 
    <!-- /////////////////////////////////////////// -->
 
-  
+  <br>
 
 <!-- /////////////////////////////////////////// -->
 <!-- // UKNOWN SECTION AT THE MOMENT  -->
@@ -369,6 +369,7 @@
 			<a class="facebookBtn smGlobalBtn" href="#"></a>
 			<a class="twitterBtn smGlobalBtn" href="#" ></a>
       <a class="linkedinBtn smGlobalBtn" href="#" ></a>
+      <i class="fab fa-instagram smGlobalBtn" href="#"></i>
       <div id="allRights">KESSLER TOPAZ MELTZER & CHECK, LLP 2020 ALL RIGHTS RESERVED.</div>
       <div id="offices1">PENNSYLVANIA OFFICE</div>  <div id="offices2">CALIFORNIA OFFICE </div>
 	</div>
