updated headers on some subpages - cases

--- a/newcases-about.html
+++ b/newcases-about.html
@@ -118,7 +118,7 @@
 <!-- /////////////////////////////////////////// -->
 
 <br>
-<div class="bg-image whiteglobe-sub"></div>
+<div class="bg-image newcases-submit "></div>
 
 <div class="container">
 
