--- a/settledcases.html
+++ b/settledcases.html
@@ -119,7 +119,7 @@
 <!-- /////////////////////////////////////////// -->
 
 <br>
-<div class="bg-image whiteglobe-sub"></div>
+<div class="bg-image settled"></div>
 
 
 
