--- a/landmarkresults.html
+++ b/landmarkresults.html
@@ -118,7 +118,7 @@
 <!-- /////////////////////////////////////////// -->
 
 <br>
-<div class="bg-image whiteglobe-sub"></div>
+<div class="bg-image stockmoney"></div>
 
 
 
