worked on headers images

--- a/contact.html
+++ b/contact.html
@@ -64,17 +64,17 @@
               <li><a href="#" id="dropdown-people">PEOPLE</a>
               </li>
               
-           <li><a href="#" id=practice-areas>PRACTICE AREAS</a>
-              <ul class="dropdown">
-                <li><a href="#" id="dropdown-USsecurities">Securities Class Actions</a></li>
-                <li><a href="#" id="dropdown-globalsecurities">Global Shareholder Litigation</a></li>
-                <li><a href="#">Mergers & Acquisitions</a></li>
-                <li><a href="#">Shareholder Derivative</a></li>
-                <li><a href="#">Consumer Fraud & Antitrust</a></li>
-                <li><a href="#" id="dropdown-corporategov">Corporate Governance</a></li>
-                <li><a href="#">Whistleblower Representation</a></li>
-              </ul>
-            </li>
+              <li><a href="#" id=practice-areas>PRACTICE AREAS</a>
+                <ul class="dropdown">
+                  <li><a href="#" id="dropdown-USsecurities">Securities Class Actions</a></li>
+                  <li><a href="#" id="dropdown-globalsecurities">Global Shareholder Litigation</a></li>
+                    <!-- <li><a href="#">Mergers & Acquisitions</a></li>
+                    <li><a href="#">Shareholder Derivative</a></li> -->
+                    <li><a href="#">Consumer Fraud & Antitrust</a></li>
+                    <li><a href="#" id="dropdown-corporategov">Corporate Governance + M&A Litigation</a></li>
+                    <li><a href="#">Whistleblower Representation</a></li>
+                  </ul>
+              </li>
   
             <li><a href="#">CASES</a>
               <ul class="dropdown">
