--- a/newcases-about.html
+++ b/newcases-about.html
@@ -63,17 +63,17 @@
               <li><a href="#" id="dropdown-people">PEOPLE</a>
               </li>
 
-           <li><a href="#" id=practice-areas>PRACTICE AREAS</a>
-              <ul class="dropdown">
-                <li><a href="#" id="dropdown-USsecurities">Securities Class Actions</a></li>
-                <li><a href="#" id="dropdown-globalsecurities">Global Shareholder Litigation</a></li>
-                <li><a href="#">Mergers & Acquisitions</a></li>
-                <li><a href="#">Shareholder Derivative</a></li>
-                <li><a href="#">Consumer Fraud & Antitrust</a></li>
-                <li><a href="#" id="dropdown-corporategov">Corporate Governance</a></li>
-                <li><a href="#">Whistleblower Representation</a></li>
-              </ul>
-            </li>
+              <li><a href="#" id=practice-areas>PRACTICE AREAS</a>
+                <ul class="dropdown">
+                  <li><a href="#" id="dropdown-USsecurities">Securities Class Actions</a></li>
+                  <li><a href="#" id="dropdown-globalsecurities">Global Shareholder Litigation</a></li>
+                    <!-- <li><a href="#">Mergers & Acquisitions</a></li>
+                    <li><a href="#">Shareholder Derivative</a></li> -->
+                    <li><a href="#">Consumer Fraud & Antitrust</a></li>
+                    <li><a href="#" id="dropdown-corporategov">Corporate Governance + M&A Litigation</a></li>
+                    <li><a href="#">Whistleblower Representation</a></li>
+                  </ul>
+              </li>
   
             <li><a href="#">CASES</a>
               <ul class="dropdown">
@@ -137,7 +137,7 @@
 <div class="newcases-description">
     Notice is hereby given that a class action lawsuit has been filed on behalf of those who purchased or otherwise acquired GoodRx Holdings, Inc. (“GoodRx”) (NASDAQ: GDRX) Class A common stock between September 23, 2020 and November 16, 2020, inclusive (the “Class Period”).<br><br>
 
-    <span style="color: rgb(228, 148, 0);">GoodRx investors may receive additional information about the case by clicking the link "Submit Your Information" above.</span><br><br>
+    <span style="color: #0066c8;">GoodRx investors may receive additional information about the case by clicking the link "Submit Your Information" above.</span><br><br>
 
     According to the complaint, GoodRx is a holding company that owns and operates a U.S. consumer-focused digital healthcare platform.  GoodRx represents that it provides consumers with free information and tools that allow them to compare prices and save on their prescription drug purchases. GoodRx provides its users with these services via apps and websites that display prices and discounts at local and mail-order pharmacies for both insured and uninsured Americans.  GoodRx primarily earns its revenue from prescription transaction fees paid by Pharmacy Benefit Managers that manage formularies and prescription transactions. GoodRx also generates revenue from subscription, advertising and telehealth services.<br><br>
 
@@ -147,7 +147,7 @@
 
     The complaint alleges that throughout the Class Period, the defendants misrepresented and failed to disclose the adverse facts about Amazon’s imminent entry into the online pharmaceutical business, which were known to defendants or recklessly disregarded by them.  Specifically, the complaint alleges that the defendants knew, but failed to disclose, that Amazon had been in the process of developing and would soon introduce its own online and mobile prescription medication ordering and fulfillment service.<br><br>
 
-    <span style="color: rgb(228, 148, 0);">If you are a member of the class described above, you may no later than February 16, 2021 move the Court to serve as lead plaintiff of the class, if you so choose.</span><br><br>
+    <span style="color: #0066c8;">If you are a member of the class described above, you may no later than February 16, 2021 move the Court to serve as lead plaintiff of the class, if you so choose.</span><br><br>
 
     A lead plaintiff is a representative party that acts on behalf of other class members in directing the litigation. In order to be appointed lead plaintiff, the Court must determine that the class member’s claim is typical of the claims of other class members, and that the class member will adequately represent the class. Your ability to share in any recovery is not, however, affected by the decision whether or not to serve as a lead plaintiff. Filling out the online form above or communicating with any counsel is not necessary to participate or share in any recovery achieved in this case.  Any member of the purported class may move the court to serve as a lead plaintiff through counsel of his/her choice, or may choose to do nothing and remain an inactive class member.<br><br>
 
