--- a/offices.html
+++ b/offices.html
@@ -67,10 +67,10 @@
                 <ul class="dropdown">
                   <li><a href="#" id="dropdown-USsecurities">Securities Class Actions</a></li>
                   <li><a href="#" id="dropdown-globalsecurities">Global Shareholder Litigation</a></li>
-                    <li><a href="#">Mergers & Acquisitions</a></li>
-                    <li><a href="#">Shareholder Derivative</a></li>
+                    <!-- <li><a href="#">Mergers & Acquisitions</a></li>
+                    <li><a href="#">Shareholder Derivative</a></li> -->
                     <li><a href="#">Consumer Fraud & Antitrust</a></li>
-                    <li><a href="#" id="dropdown-corporategov">Corporate Governance</a></li>
+                    <li><a href="#" id="dropdown-corporategov">Corporate Governance + M&A Litigation</a></li>
                     <li><a href="#">Whistleblower Representation</a></li>
                   </ul>
               </li>
