--- a/videosLP.html
+++ b/videosLP.html
@@ -78,7 +78,7 @@
             <li><a href="#">CASES</a>
               <ul class="dropdown">
                 <li><a href="#" id="dropdown-newcases">New Cases</a></li>
-                <li><a href="#">Current Cases</a></li>
+                <li><a href="#" id="dropdown-currentcases">Current Cases</a></li>
                 <li><a href="#" id="dropdown-settledcases">Settled Cases</a></li>
                 <li><a href="#" id="dropdown-landmark">Landmark Results</a></li>
                 </ul>
